small fix: added gap between badges

--- a/todolist/static/css/styles.css
+++ b/todolist/static/css/styles.css
@@ -432,13 +432,6 @@ button{
     transition: opacity 0.2s linear;
 }
 
-
-#categoryID:empty{
-    display: none;
-}
-
-
-
 .plus_add_button_inner {
     align-items: center;
     padding-top: 10px;
